added the pdf notes to the website

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anuj Bhaiya's CSS playlist</title>
 </head>
+
 <body>
     <header>
         <h1>CSS playlist</h1>
@@ -13,6 +15,11 @@
                 <li><a href='css/1. Selector/index.html'>Selector in CSS</a></li>
             </ol>
         </article>
+
+        <div class="pdf">
+            <object type="application/pdf" data="pdf_notes/1. Introduction of css.pdf" height="900" width="700"></object>
+        </div>
     </header>
 </body>
+
 </html>
