--- a/css/1. Selector/index.html
+++ b/css/1. Selector/index.html
@@ -52,6 +52,10 @@
             <p><b>id>class>element</b><br>There is also an <b>!important</b> rule, That is used to add more priority to the property than normal<br>
             Note: Do not use it unless you absolutely have to</p>
         </article>
+
+        <div class="pdf">
+            <object type="application/pdf" data="../../pdf_notes/2. selectors .pdf" height="700" width="900"></object>
+        </div>
     </main>
 </body>
 
