done with selector

--- a/css/1. Selector/index.html
+++ b/css/1. Selector/index.html
@@ -53,6 +53,8 @@
             Note: Do not use it unless you absolutely have to</p>
         </article>
 
+        <a href="Practice_Questions.html">Solution of Practice questions from the notes</a>
+
         <div class="pdf">
             <object type="application/pdf" data="../../pdf_notes/2. selectors .pdf" height="700" width="900"></object>
         </div>
