Completed till CSS float and clear in css

--- a/index.html
+++ b/index.html
@@ -48,6 +48,30 @@
                 <td><button><a href="css/5. Font and text properties in css/index.txt" target="_blank">Html</a></button></button></td>
                 <td><button><a href="css/5. Font and text properties in css/style.txt" target="_blank">css</a></button></td>
             </tr>
+            <tr>
+                <td><a href="css/6. CSS display property in css/index.html">CSS display property in css</a></td>
+                <td><button><a href="pdf_notes/6. Display property in css.pdf" target="_blank">Notes</a></button></td>
+                <td><button><a href="#" target="_blank">Html</a></button></button></td>
+                <td><button><a href="#" target="_blank">css</a></button></td>
+            </tr>
+            <tr>
+                <td><a href="css/7. Position property in css/index.html">CSS Position property in css</a></td>
+                <td><button><a href="pdf_notes/7. Position property in css.pdf" target="_blank">Notes</a></button></td>
+                <td><button><a href="#" target="_blank">Html</a></button></button></td>
+                <td><button><a href="#" target="_blank">css</a></button></td>
+            </tr>
+            <tr>
+                <td><a href="css/8. CSS float and clear/index.html">CSS float and clear in css</a></td>
+                <td><button><a href="#" target="_blank">Notes</a></button></td>
+                <td><button><a href="#" target="_blank">Html</a></button></button></td>
+                <td><button><a href="#" target="_blank">css</a></button></td>
+            </tr>
+            <tr>
+                <td><a href="css/9. signup_page.html/index.html">Sign up page with glassmorphism effect</a></td>
+                <td><button><a href="#" target="_blank">Notes</a></button></td>
+                <td><button><a href="#" target="_blank">Html</a></button></button></td>
+                <td><button><a href="#" target="_blank">css</a></button></td>
+            </tr>
         </table>
     </article>
 </body>
