done with the signup page

--- a/css/9. signup_page.html/index.html
+++ b/css/9. signup_page.html/index.html
@@ -3,27 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup page</title>
+    <title>signup</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="outerdiv">
-        <div class="innerdiv">
-            <header class="signup_header">
-                <h1>Create New Account</h1>
-            </header>
+        <!-- create two divs for one outer-box and one inner-box -->
+        <div class="outer-box">
+            <div class="inner-box">
+                <!-- creating signup header -->
+                <header class="signup-header">
+                    <h1>Signup</h1>
+                    <p>It  just takes 30 sec</p>
+                </header>
 
-            <main class="signup_label">
-                <input type="text" placeholder="Name" id="name">
-                <input type="email" placeholder="Email" id="email">
-                <input type="password" placeholder="Password" id="password">
+                <!-- creating main with class signup-body-->
+                <main class="signup-body">
 
-                <input type="checkbox" id="terms_and_condition">
-                <label for="terms_and_condition">Agree terms and conditions</label>
-                <button type="submit">Create new Account</button>
-            </main>
+                    <!-- creating form to take user input and take some action -->
+                    <form action="#">
+                        <!-- creating different fields: fullName, email, new password, confirm password submit -->
+                        <!-- creating diffrent input type in p tag -->
+                        <p>
+                            <label for="fullName">Full Name</label>
+                            <input type="text" id="fullName" name="fullName" placeholder="Anuj kumar" required>
+                        </p>
+
+                        <p>
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" placeholder="anujkumar63166316@gmail.com" required>
+                        </p>
+
+                        <p>
+                            <label for="password">Create New Password</label>
+                            <input type="password" id="password" name="password" placeholder="at least 8 charecter">
+                        </p>
+
+                        <p>
+                            <label for="password2">Confirm Your Password</label>
+                            <input type="password" id="password2" name="password2" placeholder="Enter same password as above">
+                        </p>
+
+                        <p>
+                            <input type="submit" id="submit" value="Create Acount">
+                        </p>
+                    </form>
+                </main>
+
+                <!-- adding signup-footer -->
+                <footer class="signup-footer">
+                    <p>Already have a accout? <a href="#">Login</a></p>
+                </footer>
+            </div>
+
+            <!-- creating two circles -->
+            <div class="circle c1"></div>
+            <div class="circle c2"></div>
         </div>
-
-    </div>
 </body>
 </html>
