done with flexbox

--- a/css/9. signup_page.html/index.html
+++ b/css/9. signup_page.html/index.html
@@ -1,63 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>signup</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-        <!-- create two divs for one outer-box and one inner-box -->
-        <div class="outer-box">
-            <div class="inner-box">
-                <!-- creating signup header -->
-                <header class="signup-header">
-                    <h1>Signup</h1>
-                    <p>It  just takes 30 sec</p>
-                </header>
+    <!-- create two divs for one outer-box and one inner-box -->
+    <div class="outer-box">
+        <div class="inner-box">
+            <!-- creating signup header -->
+            <header class="signup-header">
+                <h1>Signup</h1>
+                <p>It just takes 30 sec</p>
+            </header>
 
-                <!-- creating main with class signup-body-->
-                <main class="signup-body">
+            <!-- creating main with class signup-body-->
+            <main class="signup-body">
 
-                    <!-- creating form to take user input and take some action -->
-                    <form action="#">
-                        <!-- creating different fields: fullName, email, new password, confirm password submit -->
-                        <!-- creating diffrent input type in p tag -->
-                        <p>
-                            <label for="fullName">Full Name</label>
-                            <input type="text" id="fullName" name="fullName" placeholder="Anuj kumar" required>
-                        </p>
+                <!-- creating form to take user input and take some action -->
+                <form action="#">
+                    <!-- creating different fields: fullName, email, new password, confirm password submit -->
+                    <!-- creating diffrent input type in p tag -->
+                    <p>
+                        <label for="fullName">Full Name</label>
+                        <input type="text" id="fullName" name="fullName" placeholder="Anuj kumar" required>
+                    </p>
 
-                        <p>
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email" placeholder="anujkumar63166316@gmail.com" required>
-                        </p>
+                    <p>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="anujkumar63166316@gmail.com" required>
+                    </p>
 
-                        <p>
-                            <label for="password">Create New Password</label>
-                            <input type="password" id="password" name="password" placeholder="at least 8 charecter">
-                        </p>
+                    <p>
+                        <label for="password">Create New Password</label>
+                        <input type="password" id="password" name="password" placeholder="at least 8 charecter">
+                    </p>
 
-                        <p>
-                            <label for="password2">Confirm Your Password</label>
-                            <input type="password" id="password2" name="password2" placeholder="Enter same password as above">
-                        </p>
+                    <p>
+                        <label for="password2">Confirm Your Password</label>
+                        <input type="password" id="password2" name="password2"
+                            placeholder="Enter same password as above">
+                    </p>
 
-                        <p>
-                            <input type="submit" id="submit" value="Create Acount">
-                        </p>
-                    </form>
-                </main>
+                    <p>
+                        <input type="submit" id="submit" value="Create Acount">
+                    </p>
+                </form>
+            </main>
 
-                <!-- adding signup-footer -->
-                <footer class="signup-footer">
-                    <p>Already have a accout? <a href="#">Login</a></p>
-                </footer>
-            </div>
-
-            <!-- creating two circles -->
-            <div class="circle c1"></div>
-            <div class="circle c2"></div>
+            <!-- adding signup-footer -->
+            <footer class="signup-footer">
+                <p>Already have a accout? <a href="#">Login</a></p>
+            </footer>
         </div>
+
+        <!-- creating two circles -->
+        <div class="circle c1"></div>
+        <div class="circle c2"></div>
+    </div>
 </body>
+
 </html>
