--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
                 <td><button><a href="#" target="_blank">Html</a></button></button></td>
                 <td><button><a href="#" target="_blank">css</a></button></td>
             </tr>
+            <tr>
+                <td><a href="css/10. Flexbox in css/index.html">Flexbox in css</a></td>
+                <td><button><a href="#" target="_blank">Notes</a></button></td>
+                <td><button><a href="#" target="_blank">Html</a></button></button></td>
+                <td><button><a href="#" target="_blank">css</a></button></td>
+            </tr>
         </table>
     </article>
 </body>
