--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
                 <td><button><a href="#" target="_blank">Html</a></button></button></td>
                 <td><button><a href="#" target="_blank">css</a></button></td>
             </tr>
+            <tr>
+                <td><a href="css/13. CSS grid layout/index.html">CSS grid layout</a></td>
+                <td><button><a href="#" target="_blank">Notes</a></button></td>
+                <td><button><a href="#" target="_blank">Html</a></button></button></td>
+                <td><button><a href="#" target="_blank">css</a></button></td>
+            </tr>
 
         </table>
     </article>
